samples/ut/auto/TestLessFail01.err
TestLessFail01.z2(22, 27): error: can't apply operator '<' on types: 
	'org.z2legacy.samples.ut.testlessfail01.Version' and 
	'org.z2legacy.samples.ut.testlessfail01.Version'
